// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v-model Component:  default modelValue (with modifiers) 1`] = `
"import { createVNode } from \\"vue\\";
createVNode(Comp, {
  \\"modelValue\\": ref.val,
  \\"onUpdate:modelValue\\": $event => ref.val = $event,
  \\"modelModifiers\\": {
    \\"a\\": true,
    \\"b\\": true
  }
});"
`;

exports[`v-model Component:  default modelValue 1`] = `
"import { createVNode } from \\"vue\\";
createVNode(Comp, {
  \\"modelValue\\": ref.val,
  \\"onUpdate:modelValue\\": $event => ref.val = $event
});"
`;

exports[`v-model Component:  specify model prop name (with modifiers) 1`] = `
"import { createVNode } from \\"vue\\";
createVNode(Comp, {
  \\"foo\\": ref.val,
  \\"onUpdate:foo\\": $event => ref.val = $event,
  \\"fooModifiers\\": {
    \\"a\\": true,
    \\"b\\": true
  }
});"
`;

exports[`v-model Component:  specify model prop name (with other props) 1`] = `
"import { createVNode } from \\"vue\\";
createVNode(Comp, {
  \\"foo\\": ref.val,
  \\"onUpdate:foo\\": $event => ref.val = $event,
  \\"fooModifiers\\": {
    \\"a\\": true,
    \\"b\\": true
  },
  \\"a\\": \\"b\\"
});"
`;

exports[`v-model Component:  specify model prop name (with v-on) 1`] = `
"import { toHandlers, mergeProps, createVNode } from \\"vue\\";
createVNode(Comp, mergeProps({
  \\"foo\\": ref.val,
  \\"onUpdate:foo\\": $event => ref.val = $event,
  \\"fooModifiers\\": {
    \\"a\\": true,
    \\"b\\": true
  }
}, toHandlers(obj)));"
`;

exports[`v-model Component:  specify model prop name 1`] = `
"import { createVNode } from \\"vue\\";
createVNode(Comp, {
  \\"foo\\": ref.val,
  \\"onUpdate:foo\\": $event => ref.val = $event
});"
`;

exports[`v-model Element:  input with dynamic Key binding 1`] = `
"import { vModelDynamic, mergeProps, createVNode, withDirectives } from \\"vue\\";
withDirectives(createVNode(\\"input\\", mergeProps({
  \\"onUpdate:modelValue\\": $event => ref.val = $event
}, { ...props
})), [vModelDynamic, ref.val]);"
`;

exports[`v-model Element:  input with dynamic type attribute 1`] = `
"import { vModelDynamic, createVNode, withDirectives } from \\"vue\\";
withDirectives(createVNode(\\"input\\", {
  \\"onUpdate:modelValue\\": $event => ref.val = $event,
  \\"type\\": refType.value
}), [vModelDynamic, ref.val]);"
`;

exports[`v-model Element:  input with type=checkbox 1`] = `
"import { vModelCheckbox, createVNode, withDirectives } from \\"vue\\";
withDirectives(createVNode(\\"input\\", {
  \\"onUpdate:modelValue\\": $event => ref.val = $event,
  \\"type\\": \\"checkbox\\"
}), [vModelCheckbox, ref.val]);"
`;

exports[`v-model Element:  input with type=radio 1`] = `
"import { vModelRadio, createVNode, withDirectives } from \\"vue\\";
withDirectives(createVNode(\\"input\\", {
  \\"onUpdate:modelValue\\": $event => ref.val = $event,
  \\"type\\": \\"radio\\"
}), [vModelRadio, ref.val]);"
`;

exports[`v-model Element:  input with v-model 1`] = `
"import { vModelText, createVNode, withDirectives } from \\"vue\\";
withDirectives(createVNode(\\"input\\", {
  \\"onUpdate:modelValue\\": $event => ref.val = $event
}), [vModelText, ref.val]);"
`;

exports[`v-model Element:  textarea with v-model 1`] = `
"import { vModelText, createVNode, withDirectives } from \\"vue\\";
withDirectives(createVNode(\\"textarea\\", {
  \\"onUpdate:modelValue\\": $event => ref.val = $event
}), [vModelText, ref.val]);"
`;
